[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/atlas_player/atlas_player.gd" type="Script" id=1]
[ext_resource path="res://scenes/artwork/artwork.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="AtlasTexture" id=3]

[node name="Animator" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="BgColor" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 1, 1, 1, 0 )

[node name="BgTexture" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="AtlasPlayer" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = SubResource( 3 )
script = ExtResource( 1 )
